--- a/docs/user/alerting/rule-types/es-query.asciidoc
+++ b/docs/user/alerting/rule-types/es-query.asciidoc
@@ -99,11 +99,14 @@ image::user/alerting/images/rule-types-es-query-invalid.png[Test {es} query show
 The {es} query rule type performs de-duplication of document matches across rule 
 executions. If you configure the rule with a schedule interval smaller than the 
 time window, and a document matches a query in multiple rule executions, it is 
-alerted on only once.
+alerted on only once. The rule uses the timestamp of the matches for 
+de-duplication; the timestamp of the latest match is used for evaluating the 
+rule conditions when it's executed. Only matches between the latest timestamp 
+and the actual rule execution are considered.
 
-Suppose you have a rule configured to run every minute. The rule uses a time 
-window of 1 hour and checks if there are more than 99 matches for the query. The 
-{es} query rule type does the following:
+For example, let's suppose you have a rule configured to run every minute. The 
+rule uses a time window of 1 hour and checks if there are more than 99 matches 
+for the query. The {es} query rule type does the following:
 
 [cols="3*<"]
 |===
