--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -10,6 +10,7 @@
 
 Review important information about the {kib} 8.0.0 releases.
 
+* <<release-notes-8.0.0>>
 * <<release-notes-8.0.0-rc2>>
 * <<release-notes-8.0.0-rc1>>
 * <<release-notes-8.0.0-beta1>>
@@ -17,6 +18,113 @@ Review important information about the {kib} 8.0.0 releases.
 * <<release-notes-8.0.0-alpha1>>
 
 --
+[[release-notes-8.0.0]]
+== {kib} 8.0.0
+
+coming::[8.0.0]
+
+Review the {kib} 8.0.0 changes, then use the {kibana-ref-all}/7.17/upgrade-assistant.html[Upgrade Assistant] to complete the upgrade.
+
+[float]
+[[breaking-changes-8.0.0]]
+=== Breaking change
+
+Breaking changes can prevent your application from optimal operation and performance.
+Before you upgrade to 8.0.0, review the breaking change, then mitigate the impact to your application.
+
+// tag::notable-breaking-changes[]
+
+[discrete]
+[[breaking-123754]]
+.Removes the `console.ssl` setting
+[%collapsible]
+====
+*Details* +
+The `console.ssl` setting has been removed. For more information, refer to {kibana-pull}123754[#123754].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove `console.ssl` from kibana.yml.
+====
+
+// end::notable-breaking-changes[]
+
+
+To review the breaking changes in previous versions, refer to the following: 
+
+<<breaking-changes-8.0.0-rc2,8.0.0-rc2>> | <<breaking-changes-8.0.0-rc1,8.0.0-rc1>> | <<breaking-changes-8.0.0-beta1,8.0.0-beta1>> | <<breaking-changes-8.0.0-alpha2,8.0.0-alpha2>> | 
+<<breaking-changes-8.0.0-alpha1,8.0.0-alpha1>>
+
+[float]
+[[deprecations-8.0.0]]
+=== Deprecation
+
+The following functionality is deprecated in 8.0.0, and will be removed in 9.0.0.
+Deprecated functionality does not have an immediate impact on your application, but we strongly recommend
+you make the necessary updates after you upgrade to 8.0.0.
+
+[discrete]
+[[deprecation-123229]]
+.Removes support for `monitoring.cluster_alerts.allowedSpaces`
+[%collapsible]
+====
+*Details* +
+The `monitoring.cluster_alerts.allowedSpaces` setting, which {kib} uses to create Stack Monitoring alerts, has been removed. For more information, refer to {kibana-pull}123229[#123229].
+
+*Impact* +
+Before you upgrade to 8.0.0, remove `monitoring.cluster_alerts.allowedSpaces` from kibana.yml.
+====
+
+To review the deprecations in previous versions, refer to the following:
+
+<<deprecations-8.0.0-rc1,8.0.0-rc1>> | <<deprecations-8.0.0-alpha1,8.0.0-alpha1>>
+
+[float]
+[[features-8.0.0]]
+=== Features
+For information about the features introduced in 8.0.0, refer to <<whats-new,What's new in 8.0>>.
+
+Elastic Security::
+For the Elastic Security 8.0.0 release information, refer to {security-guide}/release-notes.html[_Elastic Security Solution Release Notes_].
+
+To review the features in previous versions, refer to the following: 
+
+<<features-8.0.0-rc2,8.0.0-rc2>> | <<features-8.0.0-rc1,8.0.0-rc1>> | <<features-8.0.0-beta1,8.0.0-beta1>> | <<features-8.0.0-alpha2,8.0.0-alpha2>>
+
+[[enhancements-and-bug-fixes-v8.0.0]]
+=== Enhancements and bug fixes
+
+For detailed information about the 8.0.0 release, review the enhancements and bug fixes.
+
+[float]
+[[enhancement-v8.0.0]]
+==== Enhancements
+Dashboard::
+Clone ReferenceOrValueEmbeddables by value {kibana-pull}122199[#122199]
+
+Elastic Security::
+For the Elastic Security 8.0.0 release information, refer to {security-guide}/release-notes.html[_Elastic Security Solution Release Notes_].
+
+[float]
+[[fixes-v8.0.0]]
+==== Bug Fixes
+APM::
+Restrict aggregated transaction metrics search to date range {kibana-pull}123445[#123445]
+
+Elastic Security::
+For the Elastic Security 8.0.0 release information, refer to {security-guide}/release-notes.html[_Elastic Security Solution Release Notes_].
+
+Fleet::
+Allow empty strings for required text fields in package policies {kibana-pull}123610[#123610]
+
+Maps::
+Fixes Label border color is not removed from legend when disabled {kibana-pull}122705[#122705]
+
+Monitoring::
+Ensure logstash getNodes always contains a uuid {kibana-pull}124201[#124201]
+
+Security::
+Long-running requests no longer cause sporadic logouts in certain cases, even when user sessions are active {kibana-pull}122155[#122155]
+
 [[release-notes-8.0.0-rc2]]
 == {kib} 8.0.0-rc2
 
@@ -29,8 +137,6 @@ For information about the {kib} 8.0.0-rc2 release, review the following informat
 Breaking changes can prevent your application from optimal operation and performance.
 Before you upgrade, review the breaking change, then mitigate the impact to your application.
 
-// tag::notable-breaking-changes[]
-
 [discrete]
 [[breaking-122722]]
 .Removes the ability to use `elasticsearch.username: elastic` in production
@@ -42,8 +148,6 @@ In production, you are no longer able to use the `elastic` superuser to authenti
 *Impact* +
 When you configure `elasticsearch.username: elastic`, {kib} fails.
 ====
-  
-// end::notable-breaking-changes[]
 
 To review the breaking changes in previous versions, refer to the following: 
 
@@ -1304,7 +1408,7 @@ Use the `xpack.monitoring.clusterAlertsEmail` in kibana.yml.
 ====
 
 [float]
-[[enhancements-and-bug-fixes-v8.0.0]]
+[[enhancements-and-bug-fixes-v8.0.0-alpha1]]
 === Bug fix
 
 The 8.0.0-alpha1 release includes the following bug fix.
