--- a/docs/management/saved-objects/saved-object-ids.asciidoc
+++ b/docs/management/saved-objects/saved-object-ids.asciidoc
@@ -68,7 +68,10 @@ object using the "Check for existing objects" and "Automatically overwrite confl
 above). If you then create a _different_ space and import it there, {kib} will create a new object with a random ID (step 3 above). Finally,
 if you import it into the second space again, {kib} will find the second object with a matching origin and overwrite it (step 2 above).
 
-NOTE: When you import a saved object and it is created with a different ID, it will not be 
+WARNING: When you import a saved object and it is created with a different ID, if 1. it contains weak links to other saved objects (such as
+a dashboard with a Markdown URL to navigate to another dashboard) and 2. the object's ID has changed (step 3 above), those weak links will
+be broken. For more information, refer to <<known-issue-123550,the known issue in the changelog>>.
+
 [[saved-object-ids-impact-when-using-apis]]
 ===== Using the saved objects APIs
 
