--- a/docs/management/saved-objects/saved-object-ids.asciidoc
+++ b/docs/management/saved-objects/saved-object-ids.asciidoc
@@ -33,7 +33,7 @@ After you upgrade, or if you set up a new {kib} instance using 8.x, there are a 
 ===== Accessing saved objects using old URLs
 
 When you upgrade {kib} and saved object IDs change, the "deep link" URLs to access those saved objects will also change. To reduce the impact,
-for users, each existing URL is preserved with a special <<legacy-url-aliases,legacy URL alias>>. This means that if you use a bookmark for
+each existing URL is preserved with a special <<legacy-url-aliases,legacy URL alias>>. This means that if you use a bookmark for
 a saved object ID that was changed, you'll be redirected to the new URL for that saved object.
 
 [[saved-object-ids-impact-when-using-import-and-copy]]
