--- a/docs/management/saved-objects/saved-object-ids.asciidoc
+++ b/docs/management/saved-objects/saved-object-ids.asciidoc
@@ -78,7 +78,7 @@ be broken. For more information, refer to <<known-issue-123550,the known issue i
 If you are using the saved objects APIs directly, you should be aware of these changes:
 
 * When using the <<saved-objects-api-create,create>> or <<saved-objects-api-bulk-create,bulk create>> API, you may encounter
-  <<saved-objects-api-bulk-create-conflict-errors,special conflict errors>> that **cannot** be overridden using the `overwrite: true`
+  <<saved-objects-api-bulk-create-conflict-errors,conflict errors>> that **cannot** be overridden using the `overwrite: true`
   option. This can occur if there is already a saved object with this ID in a _different_ space, or if there is a legacy URL alias for this
   ID in the same space.
 * When using the <<saved-objects-api-import,import>> or <<spaces-api-copy-saved-objects,copy to space>> API, objects can potentially be
