--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -79,6 +79,32 @@ To review the deprecations in previous versions, refer to the following:
 <<deprecations-8.0.0-rc1,8.0.0-rc1>> | <<deprecations-8.0.0-alpha1,8.0.0-alpha1>>
 
 [float]
+[[known-issue-8.0.0-rc2]]
+=== Known issue
+
+[discrete]
+[[known-issue-123550]]
+.Importing and copying saved objects causes weak links to break
+[%collapsible]
+====
+*Details* +
+When you add weak links in saved objects, for example, a dashboard may include a Markdown panel that contains a relative URL to
+another dashboard. Weak links are defined by free text, but are undefined by the saved object relationships, and can break if **both** of the following conditions are true:
+
+* You are importing saved objects into multiple spaces, _OR_ you are copying saved objects into another space
+* Before you upgraded to 8.0.0, the saved objects did not already exist in the destinations
+
+In 8.0.0 and later, weak links break because <<saved-object-ids-impact-when-using-import-and-copy,saved object IDs can change during import or copy>>. 
+This issue will be fixed 8.0.1 and 8.1.0. For more information, refer to {kibana-pull}123550[#123550].
+
+*Impact* +
+Saved objects in 7.x that are migrated during upgrade are **not** impacted.
+Only _new_ saved objects that are imported or copied _multiple times_ are be impacted.
+If you are impacted, you can re-import or re-copy your saved objects after the fix is
+implemented to preserve the weak links.
+====
+
+[float]
 [[features-8.0.0]]
 === Features
 For information about the features introduced in 8.0.0, refer to <<whats-new,What's new in 8.0>>.
@@ -153,33 +179,6 @@ To review the breaking changes in previous versions, refer to the following:
 
 <<breaking-changes-8.0.0-rc1,8.0.0-rc1>> | <<breaking-changes-8.0.0-beta1,8.0.0-beta1>> | <<breaking-changes-8.0.0-alpha2,8.0.0-alpha2>> | 
 <<breaking-changes-8.0.0-alpha1,8.0.0-alpha1>>
- 
-[float]
-[[known-issue-8.0.0-rc2]]
-=== Known issue
-
-[discrete]
-[[known-issue-123550]]
-.Importing or copying saved objects in 8.0.0 can cause "weak links" to break
-[%collapsible]
-====
-*Details* +
-Sometimes users add "weak links" in saved objects -- for example, a dashboard may include a Markdown panel that contains a relative URL to
-another dashboard. This is considered a weak link because it is not defined by the saved object's relationships, rather it is defined by a
-user in free text. Such weak links can break if **both** of the following conditions are true:
-
-1. You are importing the saved object(s) into multiple spaces, _OR_ you are copying the saved object(s) into another space
-2. The saved object(s) did not already exist in the destination(s) prior to upgrading to the 8.0.0 release
-
-This problem occurs because <<saved-object-ids-impact-when-using-import-and-copy,saved object IDs can change during import/copy starting in
-8.0>>. We are planning to address this issue in a bugfix for the 8.0.1 and 8.1 releases. For more information, refer to
-{kibana-pull}123550[#123550]. If you are impacted, you will be able to re-import (or re-copy) your saved objects after the bugfix is
-implemented to preserve these weak links.
-
-*Impact* +
-Saved objects that existed in 7.x and are migrated upon upgrade will **not** be impacted.
-Only _new_ saved objects that are imported/copied _multiple times_ will be impacted.
-====
 
 [float]
 [[features-8.0.0-rc2]]
